flex layout and collapse bug fix

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,6 @@
+.myPadding{
+    padding: 10px; 
+}
 
 .myGlow {
     /* background-color: #004A7F; */
